@@ -254,28 +254,18 @@ AC_DEFUN([FIND_LIBGCJ_JAR],
     LIBGCJ_JAR=
   ])
   if test -z "${LIBGCJ_JAR}"; then
-    AC_MSG_CHECKING(for libgcj-4.3.0.jar or libgcj-4.1.2.jar)
-    if test -e "/usr/share/java/libgcj-4.3.0.jar"; then
-      LIBGCJ_JAR=/usr/share/java/libgcj-4.3.0.jar
+    AC_MSG_CHECKING(for libgcj-4.3*.jar or libgcj-4.1*.jar)
+    if test -e /usr/share/java/libgcj-4.3*.jar; then
+      LIBGCJ_JAR=/usr/share/java/libgcj-4.3*.jar
       AC_MSG_RESULT(${LIBGCJ_JAR})
     else
-      if test -e "/usr/share/java/libgcj-4.3.jar"; then
-        LIBGCJ_JAR=/usr/share/java/libgcj-4.3.jar
-	AC_MSG_RESULT(${LIBGCJ_JAR})
-      else
-	AM_CONDITIONAL(GCC_OLD, test x = x)
-        if test -e "/usr/share/java/libgcj-4.1.2.jar"; then
-          LIBGCJ_JAR=/usr/share/java/libgcj-4.1.2.jar
-          AC_MSG_RESULT(${LIBGCJ_JAR})
-	else
-	  if test -e "/usr/share/java/libgcj-4.1.jar"; then
-            LIBGCJ_JAR=/usr/share/java/libgcj-4.1.jar
-            AC_MSG_RESULT(${LIBGCJ_JAR})
-	  else
-	    AC_MSG_RESULT(no)
-	  fi
-	fi
-      fi
+       AM_CONDITIONAL(GCC_OLD, test x = x)
+       if test -e /usr/share/java/libgcj-4.1*.jar; then
+         LIBGCJ_JAR=/usr/share/java/libgcj-4.1*.jar
+         AC_MSG_RESULT(${LIBGCJ_JAR})
+       else
+ 	AC_MSG_RESULT(no)
+       fi
     fi
   fi
   if test -z "${LIBGCJ_JAR}"; then
